# BaseData

./: README.md  main.py  pyproject.toml
src/: .env.example  db_manager.py  hh_parser.py  main.py  utils.py
